# test_django

./: README.md  manage.py  pyproject.toml
parser/: models.py  views.py
parser/migrations/: 0001_initial.py  0002_alter_mark_mark_name_alter_model_body_type_and_more.py  0003_auto_20231118_1101.py  0004_model_mark.py  0005_alter_mark_id_alter_model_id.py
templates/: base.html  models.html
xmlparse/: asgi.py  settings.py  urls.py  wsgi.py
